--- a/resume.html
+++ b/resume.html
@@ -360,7 +360,7 @@
                     </div>
                     <div class="row" style="border-top:1px solid #F0F0F0">
                         <div class="col-sm-12">
-                            <span style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">技能特长</span>
+                            <span style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">自我评价</span>
                             <div class="col-sm-12">
                                 <div style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
                                     品行端正,个性沉稳,做事严谨认真;能以诚待人;与同学及朋友相处融 洽,乐于助人。<br>
