--- a/RM_1.html
+++ b/RM_1.html
@@ -205,6 +205,13 @@
                             <a href="https://www.bilibili.com">bilibili</a>  <a href="https://github.com/">github</a>.........<br>
                             github, 能在上面找到想要的代码, 需要会上传项目, 才有可能像我一样给自己放彩虹皮.
                         </p>
+                        <h3>
+                            7.代码
+                        </h3>
+                        <p>
+                            <a href="https://github.com/shilei31415/AutoShot">https://github.com/shilei31415/AutoShot</a>
+
+                        </p>
                     </div>
                 </article>
             </div>
