--- a/RM_2.html
+++ b/RM_2.html
@@ -227,6 +227,13 @@
                         <h4>
                             PS:图像的显示在调试的时候很有用,但在比赛的时候一点用也没有,建议使用单独的线程进行显示,不影响识别速率,不影响预测的△t
                         </h4>
+                        <h3>
+                            3.代码
+                        </h3>
+                        <p>
+                            <a href="https://github.com/shilei31415/AutoShot">https://github.com/shilei31415/AutoShot</a>
+
+                        </p>
                     </div>
                 </article>
             </div>
