--- a/RM_3.html
+++ b/RM_3.html
@@ -270,6 +270,13 @@
                             如:在输入前使用逆透视变换进行校正,可以让两个1号看起来更相似,也可以让有一定角度的7和1区别开.
                             当然还有亮度旋转角度,等可以调节
                         </p>
+                        <h3>
+                            4.代码
+                        </h3>
+                        <p>
+                            <a href="https://github.com/shilei31415/AutoShot">https://github.com/shilei31415/AutoShot</a>
+
+                        </p>
                     </div>
                 </article>
             </div>
