--- a/RM_4.html
+++ b/RM_4.html
@@ -221,6 +221,13 @@
                             关于串口通信提一个我个人觉得好用的方法: 如果发现, 机器人枪口需要较长时间才能到达指定方向, 到达指定方向后有需要较长时间才能稳定(不抖动),
                             可以尝试将串口数据变为原来的3次方并乘一定系数, 保证正负号的同时, 放大较远时的偏移量, 缩小较近时的偏移量.
                         </p>
+                        <h3>
+                            8.代码
+                        </h3>
+                        <p>
+                            <a href="https://github.com/shilei31415/AutoShot">https://github.com/shilei31415/AutoShot</a>
+
+                        </p>
                     </div>
                 </article>
             </div>
