--- a/resume.html
+++ b/resume.html
@@ -113,7 +113,7 @@
                                     <div class="col-sm-12">
                                         <span style="font-family:'Times New Roman'; font-size:12pt; font-style:normal; font-variant:normal">&#xa0;</span>
                                         <img src="images/resume/002.png">
-                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">目前正在找工作 </span>
+                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">考研 </span>
                                         <span style="font-family:'Times New Roman'; font-size:12pt; font-style:normal; font-variant:normal">&#xa0;</span>
                                         <img src="images/resume/003.png">
                                         <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">13708702078 </span>
@@ -124,26 +124,26 @@
                                     <div class="col-sm-12">
                                         <span style="font-family:'Times New Roman'; font-size:12pt; font-style:normal; font-variant:normal">&#xa0;</span>
                                         <img src="images/resume/005.png">
-                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">男|20 岁 (1999/11/29)</span>
+                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">男|21 岁 (1999/11/29)</span>
                                     </div>
                                 </td>
                             </tr>
                         </table>
                     </div>
                     <div class="row" style="background-color: #f8f9fa">
-                        <div class="col-sm-6">
-                            <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">求职意向</p>
-                            <div class="col-sm-4">
-                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">工作类型：</p>
-                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">职位：</p>
-                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">薪资：</p>
-                            </div>
-                            <div class="col-sm-7">
-                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">全职</p>
-                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">机器视觉工程师/材料工程师</p>
-                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">8000元/月</p>
-                            </div>
-                        </div>
+<!--                        <div class="col-sm-6">-->
+<!--                            <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">求职意向</p>-->
+<!--                            <div class="col-sm-4">-->
+<!--                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">工作类型：</p>-->
+<!--                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">职位：</p>-->
+<!--                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">薪资：</p>-->
+<!--                            </div>-->
+<!--                            <div class="col-sm-7">-->
+<!--                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">全职</p>-->
+<!--                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">机器视觉工程师/材料工程师</p>-->
+<!--                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">8000元/月</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
                         <div class="col-sm-6">
                             <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">学历/学位</p>
                             <div class="col-sm-4">
@@ -295,14 +295,14 @@
                                     <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">学分绩点</p>
                                 </div>
                                 <div class="col-sm-4">
-                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">3.21/4.0</p>
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">3.16/4.0</p>
                                 </div>
-                                <div class="col-sm-2">
-                                    <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">平均分</p>
-                                </div>
-                                <div class="col-sm-4">
-                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">82.63</p>
-                                </div>
+<!--                                <div class="col-sm-2">-->
+<!--                                    <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">平均分</p>-->
+<!--                                </div>-->
+<!--                                <div class="col-sm-4">-->
+<!--                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">82.63</p>-->
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
