alter time_line

--- a/time_line.html
+++ b/time_line.html
@@ -49,14 +49,17 @@
         <div class="row top-header">
             <div class="col-sm-4 search-form-col">
                 <form action="#" method="get" class="search-form">
+                    <a href="index.html">
                     <div class="input-group">
                         <img src="images/stone2.png" alt="">
                     </div>
+                    </a>
                 </form>
             </div>
             <div class="col-sm-4 logo-col text-center">
                 <h3>3 Stones</h3>
             </div>
+            <a href="index.html">
             <div class="col-sm-4 menu-trigger-col">
                 <button class="menu-trigger pull-right">
                     <span class="active-page">home</span>
@@ -64,38 +67,7 @@
                     <img src="images/menu-close-white.png" alt="" class="icon-cross">
                 </button>
             </div>
-        </div>
-    </div>
-    <div class="row menu-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 menu-col">
-                    <div class="row">
-                        <ul class="nav column-menu black-bg">
-                            <li class="active dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                   aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="index2.html">2020-6月</a></li>
-                                    <!--跳转到home页的某一行-->
-                                </ul>
-                            </li>
-                            <li><a href="resume.html">resume(个人简历)</a></li>
-                            <li><a href="blog2.html">my memery(我的回忆)</a></li>
-                            <li><a href="https://space.bilibili.com/526402170">bilibili</a></li>
-                        </ul>
-                        <ul class="nav column-menu black-bg">
-                            <li><a href="blog3.html">I'm reading(最近在读)</a></li>
-                            <li><a href="#">I'm doing(最近在做)</a></li>
-                            <li><a href="https://github.com/shilei31415">github</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4 subscribe-col">
-                    <!--右侧空间-->
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 </header>
